assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Oswald&family=PT+Sans+Narrow&family=Special+Elite:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
*{
  /* all default margin, padding and border values are removed */
  margin: 0;
  border: 0;
  padding: 0;
}
.logo a{
    text-decoration:none;
}
.logo {
  height: 300px;
  width: 448px;
  text-align: center;
  line-height: 20px;
  padding:50px;
 
  
 
}

#initial {
    font-family: "Special Elite", serif;
    font-size: 60px;
    text-transform: uppercase;
    text-decoration: underline;
    text-decoration-color: red;
    letter-spacing: 0px;
    text-align: center;
    color: #555555;
}
#name {
    font-family: "Oswald", sans-serif;
    font-size: 40px;
    letter-spacing: 4px;
    text-align: center;
    color: #555555;
}
#tagline {
    font-family: "kalam", cursive;
    font-size: 20px;
    letter-spacing: 0px;
    text-align: center;
    color: #e4073e;
}

#hero-image {
          
    height: 300px;
    width: 100%;
    background: url("../images/hero.jpg");
    background-position: right;
    background-repeat: no-repeat;


}

.no-margin{
    padding: 0;
    margin: 0;
}
/* menu */

#nav{
    background: #eaeaec;
}

.menuitem {
  
    height: 40px;
    width: 100%;
    text-align: center;
    background: #A4E4E1;
    font-family: "Rancho";
    font-size: 25px;
    font-weight: 400;
    color: #000000;
    letter-spacing: 2px;
}

.menuitem a{
    text-decoration: none;
    margin-top: 20px;
    color: #000000;
    
}
.menuitem a:hover{
    color:#000000;
    text-decoration: underline;
}

.menuitem a:active{
    color: white;
}
/*.menuitem a:visited{
    color: white;
}*/
.active {
  background-color: #06BDB2;  
}
.active a{
    color: #FFFFFF;
}

.inactive {
    background: #aaaaaa;    
}


/* Footer styles */

footer{
    background-color: #b3aa82;
    /*background-color: #8C7F7F;*/
    min-height: 120px;
    margin: 0;
}

.footer-links li a i{
    width: 40px;
    height: 40px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 18px;
    line-height: 12px;
    text-align: center;
    color: #fafafa;
    background: #8f8f8f;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}
.social-link li a i:hover{
    background-color: #a9e1f1;
}
#footer-content{
   
    text-align: center;
    vertical-align: center;
    padding: 40px;
}

.center-list{
    display: inline-block
}
/* body section of index page*/

.center-content{
    padding: 2%;
    text-align: center;
}
.position{
    margin-left: 40px;    
}

.whyart-background{
    background-color: #FFEDE3;
}

.more-background{
    background-color: #EDD7FE;
}
.body-content{
    text-align: left;
    line-height: 30px;
    margin-top: 10%;
    padding-right: 25px;
    padding-left: 25px;
    padding-bottom: 20px;
    width: 100%;
    height: 80%;
    border-radius: 5%;
}

.body-content h2{
    font-family: "Oswald";
    font-weight: 400;
    font-size: 40px;;
}

.body-content p{
    margin-top: 30px;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 20px;
    letter-spacing: 2px;
}

#circle-cover-brush{
  height: 200px;
  width: 200px;
  border: 1px solid;
  background: url("../images/artsupplies_small.jpg") no-repeat center ;
  border-radius: 50%;
  bottom: 220px; 
  right: 150px;
  position: absolute;
  z-index: 1;
}

#circle-cover-pallete{
  height: 200px;
  width: 300px;
  background: url("../images/pallete_small_nobg.png") no-repeat center center;
  border-radius: 50%;
  bottom: 250px;
  left: 150px;
  position: absolute;
  z-index: 1;
}

.headline1-align h2{
    margin-top: 10%;
    padding-top: 5%;
    margin-left: 120px;
    text-align: left;
}
.headline2-align h2{
    margin-top: 10%;
    padding-top: 5%;
    margin-right: 120px;
    text-align: right;
}
#separator-image{
    margin: 0;
    border: 0;
    padding: 0;    
}
/* bottom section of home page*/
#Engage{
  background: url("../images/eventsimage.jpg") no-repeat center center;
  background-size: cover;
  width: 100%;
  overflow: hidden;
}

#Engage div{
  color: #fafafafa;
  background-color: rgba(89, 1, 100, 0.4);
  width: 50%;
  height: 200px;
  float:left;
  margin: 0;
  padding:20px;
  padding-top: 0px;
  text-align:left;
  border: 2px solid;
}
#Engage h2{
    
    font-family: 'Oswald', sans-serif;
    color: #fafafafa;
    text-transform: uppercase;
    font-weight: 300;
    font-size: 20px;
    letter-spacing: 2px;
    
}
#Engage h5{
    font-family: 'Lato', sans-serif;
    color: #fafafafa;
    font-weight: 200150;
    font-size: 15px;
    letter-spacing: 2px;
    padding-left: 10px;
}
/* Regitration form styles*/
#form-section {
    clear: left;
    background: url("../images/FormBack.jpg");
    background-size: cover;
    background-position: center;
    height: 900px;
}
#form-section div div{
    padding: 20px;
    margin-left: 30px;
}
#form-section div div h2{
    font-family: "Kalam", cursive;
    font-weight: 300px;
    font-size: 40px;
}
.registration-form{
  /*margin-top: 150px;*/
  margin-left: 5%;
  margin-top: 0px;
  color: #000000;
  /*background:rgba(60, 60, 60, 0.6);*/
  line-height: 20px;
  position: absolute;
  max-width: 400px;;
}

.text-input::placeholder{
    color: rgb(48, 87, 9);
}
.text-input
{   
    color: #000000; 
    
    font-family: "Lato", sans-serif; 
    font-weight: 300px; 
    font-size: 15px; 
    background-color: rgba(116, 167, 116, 0.3);
   /* height: 30px;*/
   border: 1px solid;
   border-color: rgb(48, 87, 9);
    border-radius: 5%;
    padding: 5px;
}
.label-text{
    font-family: "Lato", sans-serif; 
    font-weight: 400px; 
    font-size: 14px; 
}
.register-button{
    font-family: "Lato", sans-serif; 
    font-weight: 300px; 
    background-color: #C63232;
    border: none;
    color: white;
    padding: 5px 60px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 15px;
    border-radius: 5%;
}

/* catalog page styles */
#painting_gallery{
    background-color: #FFFFF6;
    border: 1px solid;
  
}
#painting_gallery .row{
      margin: 50px 30px;
}

div.gallery {
  border: 1px solid #ccc;
  background-color:#5B0A0A;
  text-align: center;
}

div.gallery:hover {
  border: 1px solid #777;
}

div.gallery img {
  width: 80%;
  height: 80%;
}

div.desc {
  padding: 15px;
  font-family: "Lato", sans-serif;
  font-weight: 200px;
  text-align: left;
  background-color: white;
}

* {
  box-sizing: border-box;
}

.container {
  padding: 10px;
  width: 24.99999%;
  display: inline-block;
}
/* ----- Media Query Section for different screen Sizes ---*/
@media only screen and (max-width: 700px) {
    .container {
        width: 49.99999%;
        margin: 6px 0;
    }
    #section-bottom{
        margin-top: 10px;
    }
    
    #Engage div{
        width: 100%;
    }
    .logo{
        width: 100%;
    }
}

@media only screen and (max-width: 500px) {
  .container {
    width: 100%;
  }
  /*.logo{
       padding-right: 100px;
  }*/
  .registration-form{
      margin: 0;
      padding: 0; 
  }
  #form-section{
    padding:0;
    margin:0;
  }
  #form-section h2{
        text-align: center;
  }
  
  .body-content h2{
    font-size: 35px;
    }

}

@media screen and (max-width: 943px)
{
    .no-show{
        width: 0px;
        display: none; 
    }
    #place_order{
        display: none;
    }
    #artivity{
        display: none;
    }
    #circle-cover-brush{
        display: none;
    }
    #circle-cover-pallete{
        display: none;
    }
    #separator-image{
        margin-top: 50px;
        padding: 5%;
        vertical-align: center;
        box-align: center;
        text-align: center;
        height: 250px;
        width: 70%;
        background: url("../images/pallete_small.jpg") no-repeat center center;
        border-radius: 50%;
        margin:0 auto;
    }
    .menuitem{
        width: 100%;
        margin-left: 5px;
        padding-right: 8px;
        padding-left: 8px;
    }
    .logo{
        width: 100%;
    }
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

